general/restrict-hostnames/examples/ns_allow_no_host.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress.ssc-spc.gc.ca/allowed-hosts: '[{"host":"","path":"/"}]'
  name: test
