general/restrict-hostnames/examples/ns_path_empty.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress.ssc-spc.gc.ca/allowed-hosts: '[{"host":"test.ca","path":""}]'
  name: test
