general/restrict-hostnames/examples/ns_specific_path.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress.ssc-spc.gc.ca/allowed-hosts: '[{"host":"test.ca","path":"/finance"},{"host": "testing.ca","path":"/finance"}]'
  name: test
