general/restrict-hostnames/examples/dr_host_not_allowed.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: test
  namespace: test
spec:
  host: banking.ca
