general/restrict-hostnames/examples/ingress_conflict.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prod-other
  namespace: other
spec: 
  rules: 
  - host: test.ca
    http: 
      paths:
      - path: /finance
        backend: 
          service:
            name: banking
            port:
              number: 443
      - path: /other
        backend: 
          service:
            name: banking
            port:
              number: 443
