general/restrict-hostnames/examples/ingress_multiple_paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prod
  namespace: test
spec: 
  rules: 
  - host: test.ca
    http: 
      paths:
      - path: /finance
        backend: 
          service:
            name: banking
            port:
              number: 443
      - path: /other
        backend: 
          service:
            name: banking
            port:
              number: 443
