general/restrict-hostnames/examples/ingress_no_path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prod
  namespace: test
spec: 
  rules: 
  - host: test.ca
    http: 
      paths:
      - pathType: ImplementationSpecific
        backend: 
          service:
            name: banking
            port:
              number: 443
