general/restrict-hostnames/examples/vs_namespace_hosts.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test
  namespace: test
spec:
  hosts:
  - finance.billing.svc
  - finance.billing.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /finance
    - uri:
        exact: /finance
    - uri:
        regex: ^/finance
  tcp:
  - route:
    - destination:
        host: finance.test.svc.cluster.local
  tls:
  - match:
    - sniHosts:
      - finance.test.scv.cluster.local
