general/restrict-hostnames/examples/vs_no_host.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test
  namespace: test
spec:
  hosts: [""]
  http:
  - match:
    - uri:
        prefix: /finance
    - uri:
        exact: /finance
    - uri:
        regex: ^/finance
  tcp:
  - route:
    - destination:
        host: finance.test.svc.cluster.local
  tls:
  - match:
    - sniHosts:
      - finance.test.scv.cluster.local
