general/restrict-hostnames/examples/vs_no_path.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test
  namespace: test
spec:
  hosts:
  - test.ca
  - testing.ca
  http:
  - route:
    - destination:
        host: banking
