general/restrict-hostnames/examples/vs_regex.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test
  namespace: test
spec:
  hosts:
  - test.ca
  - testing.ca
  http:
  - match:
    - uri:
        regex: ^/finance/[a-f1-0](16)
  tcp:
  - route:
    - destination:
        host: finance.test.svc.cluster.local
  tls:
  - match:
    - sniHosts:
      - finance.test.scv.cluster.local
